[gd_scene load_steps=10 format=3 uid="uid://mgc41herwi0c"]

[ext_resource type="Script" path="res://classes/player/BasePlayer.gd" id="1_0maoe"]
[ext_resource type="SpriteFrames" uid="uid://bywr4fn71d62h" path="res://assets/spriteframes/players/player_slugger.tres" id="2_j0cdl"]
[ext_resource type="Texture2D" uid="uid://bk6ix7ad1d8xr" path="res://assets/sprites/shadows/shadow_player.png" id="3_75ca7"]
[ext_resource type="PackedScene" uid="uid://bgp6758r5tsm5" path="res://classes/equipment/BaseEquipment.tscn" id="4_jdj5l"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0hbtw"]
friction = 0.0
rough = true
absorbent = true

[sub_resource type="CircleShape2D" id="CircleShape2D_e8vjy"]
radius = 10.0499

[sub_resource type="CircleShape2D" id="CircleShape2D_tau8x"]
radius = 17.85

[sub_resource type="CircleShape2D" id="CircleShape2D_2cvht"]
radius = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq4ih"]
size = Vector2(2500, 1500)

[node name="BasePlayer" type="RigidBody2D"]
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_0hbtw")
lock_rotation = true
script = ExtResource("1_0maoe")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 25)
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_e8vjy")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2(0, 12)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, -10)
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_tau8x")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(0, 23)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -10)
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_2cvht")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="MobDetetctionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobDetetctionArea"]
shape = SubResource("RectangleShape2D_cq4ih")
debug_color = Color(0.94902, 0, 0.584314, 0.054902)

[node name="DetectMobTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="BaseEquipment" parent="." instance=ExtResource("4_jdj5l")]
position = Vector2(0, 52)

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.509804)
position = Vector2(0, 54)
scale = Vector2(3, 3)
texture = ExtResource("3_75ca7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 51)
scale = Vector2(3, 3)
sprite_frames = ExtResource("2_j0cdl")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.894951
offset = Vector2(0, -17)

[connection signal="body_entered" from="MobDetetctionArea" to="." method="_on_mob_detetction_area_body_entered"]
[connection signal="body_exited" from="MobDetetctionArea" to="." method="_on_mob_detetction_area_body_exited"]
